--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -415,6 +415,7 @@
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\MemberOfHouseholdProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\PaymentProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\StaticTextProxyTests.cs" />
+    <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\StorageProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\StorageTypeProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\TranslationInfoProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\TranslationProxyTests.cs" />
