--- a/OSDevGrp.OSIntranet.Repositories/packages.config
+++ b/OSDevGrp.OSIntranet.Repositories/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
-  <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
+  <package id="Google.Protobuf" version="3.6.0" targetFramework="net46" />
+  <package id="MySql.Data" version="8.0.12" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
