--- a/OSDevGrp.OSIntranet.Tests/packages.config
+++ b/OSDevGrp.OSIntranet.Tests/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="AutoFixture" version="3.50.3" targetFramework="net45" />
   <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
+  <package id="Google.Protobuf" version="3.6.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net45" />
-  <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
+  <package id="MySql.Data" version="8.0.12" targetFramework="net46" />
   <package id="NUnit" version="3.7.1" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
