--- a/OSDevGrp.OSIntranet.Services/Web.Release.config
+++ b/OSDevGrp.OSIntranet.Services/Web.Release.config
@@ -17,8 +17,8 @@
 
   <connectionStrings>
     <clear/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb;DATABASE=oswebdb;UID=ODBC;Pooling=True" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb;DATABASE=foodwaste;UID=ODBC;Pooling=True" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb;DATABASE=foodwaste;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
   <system.serviceModel>
