--- a/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
+++ b/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
@@ -94,6 +94,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentNullGuard.cs" />
     <Compile Include="ClaimValueProvider.cs" />
     <Compile Include="ExceptionBuilder.cs" />
     <Compile Include="FoodWasteFaultExceptionBuilder.cs" />
