Moving ArgumentNullGuard to OSDevGrp.OSIntranet.Infrastructure.Interfaces so it can be used from all projects

--- a/OSDevGrp.OSIntranet.Infrastructure.Interfaces/OSDevGrp.OSIntranet.Infrastructure.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Infrastructure.Interfaces/OSDevGrp.OSIntranet.Infrastructure.Interfaces.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentNullGuard.cs" />
     <Compile Include="Exceptions\IntranetBusinessException.cs" />
     <Compile Include="Exceptions\IntranetRepositoryException.cs" />
     <Compile Include="Exceptions\IntranetSystemException.cs" />
