Moving IArgumentNullGuard and ArgumentNullGuard to the namespace Guards within the assembly OSDevGrp.OSIntranet.Repositories.Interfaces

--- a/OSDevGrp.OSIntranet.Infrastructure.Interfaces/OSDevGrp.OSIntranet.Infrastructure.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Infrastructure.Interfaces/OSDevGrp.OSIntranet.Infrastructure.Interfaces.csproj
@@ -54,11 +54,11 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArgumentNullGuard.cs" />
+    <Compile Include="Guards\ArgumentNullGuard.cs" />
     <Compile Include="Exceptions\IntranetBusinessException.cs" />
     <Compile Include="Exceptions\IntranetRepositoryException.cs" />
     <Compile Include="Exceptions\IntranetSystemException.cs" />
-    <Compile Include="IArgumentNullGuard.cs" />
+    <Compile Include="Guards\IArgumentNullGuard.cs" />
     <Compile Include="IClaimValueProvider.cs" />
     <Compile Include="IExceptionBuilder.cs" />
     <Compile Include="IFaultExceptionBuilder.cs" />
