Updating endpoint etc in the configuration files

--- a/OSDevGrp.OSIntranet.Services/Web.Debug.config
+++ b/OSDevGrp.OSIntranet.Services/Web.Debug.config
@@ -17,8 +17,8 @@
 
   <connectionStrings>
     <clear/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb;DATABASE=foodwaste;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=foodwaste;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
   <system.serviceModel>
@@ -47,9 +47,21 @@
       </ws2007FederationHttpBinding>
     </bindings>
     <client>
-      <endpoint name="AdresseRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)"/>
-      <endpoint name="FinansstyringRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)"/>
-      <endpoint name="FællesRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/FællesRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)"/>
+      <endpoint name="AdresseRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/AdresseRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)">
+        <identity xdt:Transform="Replace">
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService/10.128.0.189" />
+        </identity>
+      </endpoint>
+      <endpoint name="FinansstyringRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)">
+        <identity xdt:Transform="Replace">
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService/10.128.0.189" />
+        </identity>
+      </endpoint>
+      <endpoint name="FællesRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FællesRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)">
+        <identity xdt:Transform="Replace">
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService/10.128.0.189" />
+        </identity>
+      </endpoint>
     </client>
     <behaviors>
       <serviceBehaviors>
