--- a/OSDevGrp.OSIntranet.Services/Web.Release.config
+++ b/OSDevGrp.OSIntranet.Services/Web.Release.config
@@ -12,13 +12,13 @@
   </iocConfiguration>
 
   <basicSecurityTokenServiceConfiguration>
-    <issuerTokenName address="http://mother:8010/sts" xdt:Transform="SetAttributes(address)"/>
+    <issuerTokenName address="http://services.osdevgrp.local:8010/sts" xdt:Transform="SetAttributes(address)"/>
   </basicSecurityTokenServiceConfiguration>
 
   <connectionStrings>
     <clear/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb;DATABASE=foodwaste;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=foodwaste;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
   <system.serviceModel>
@@ -31,25 +31,37 @@
         <binding name="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding">
           <security>
             <message>
-              <issuer address="http://mother/osintranet/basicsecuritytokenservice.svc/WSX509" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)"/>
-              <issuerMetadata address="http://mother/osintranet/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)"/>
+              <issuer address="http://services.osdevgrp.local/osintranet/basicsecuritytokenservice.svc/WSX509" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)"/>
+              <issuerMetadata address="http://services.osdevgrp.local/osintranet/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)"/>
             </message>
           </security>
         </binding>
         <binding name="OSDevGrp.OSIntranet.SecureByUserNameTransactionFederationHttpBinding">
           <security>
             <message>
-              <issuer address="http://mother/osintranet/basicsecuritytokenservice.svc/WSUserName" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)"/>
-              <issuerMetadata address="http://mother/osintranet/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)"/>
+              <issuer address="http://services.osdevgrp.local/osintranet/basicsecuritytokenservice.svc/WSUserName" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)"/>
+              <issuerMetadata address="http://services.osdevgrp.local/osintranet/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)"/>
             </message>
           </security>
         </binding>
       </ws2007FederationHttpBinding>
     </bindings>
     <client>
-      <endpoint name="AdresseRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)"/>
-      <endpoint name="FinansstyringRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)"/>
-      <endpoint name="FællesRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/FællesRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)"/>
+      <endpoint name="AdresseRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/AdresseRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)">
+        <identity xdt:Transform="Replace">
+          <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService" />
+        </identity>
+      </endpoint>
+      <endpoint name="FinansstyringRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)">
+        <identity xdt:Transform="Replace">
+          <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService" />
+        </identity>
+      </endpoint>
+      <endpoint name="FællesRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FællesRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)">
+        <identity xdt:Transform="Replace">
+          <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService" />
+        </identity>
+      </endpoint>
     </client>
     <behaviors>
       <serviceBehaviors>
@@ -57,12 +69,12 @@
           <serviceCredentials>
             <issuedTokenAuthentication>
               <allowedAudienceUris xdt:Transform="Replace">
-                <add allowedAudienceUri="http://mother/osintranet/adressekartotekservice.svc"/>
-                <add allowedAudienceUri="http://mother/osintranet/finansstyringservice.svc"/>
-                <add allowedAudienceUri="http://mother/osintranet/kalenderservice.svc"/>
-                <add allowedAudienceUri="http://mother/osintranet/commonservice.svc"/>
-                <add allowedAudienceUri="http://mother/osintranet/foodwastesystemdataservice.svc"/>
-                <add allowedAudienceUri="http://mother/osintranet/foodwastehouseholddataservice.svc"/>
+                <add allowedAudienceUri="http://services.osdevgrp.local/osintranet/adressekartotekservice.svc"/>
+                <add allowedAudienceUri="http://services.osdevgrp.local/osintranet/finansstyringservice.svc"/>
+                <add allowedAudienceUri="http://services.osdevgrp.local/osintranet/kalenderservice.svc"/>
+                <add allowedAudienceUri="http://services.osdevgrp.local/osintranet/commonservice.svc"/>
+                <add allowedAudienceUri="http://services.osdevgrp.local/osintranet/foodwastesystemdataservice.svc"/>
+                <add allowedAudienceUri="http://services.osdevgrp.local/osintranet/foodwastehouseholddataservice.svc"/>
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
