--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -38,7 +38,7 @@
     <trustedRelyingPartyCollection>
       <clear />
       <add address="http://localhost" />
-      <add address="http://mother" />
+      <add address="http://services.osdevgrp.local" />
     </trustedRelyingPartyCollection>
     <claimCollection>
       <clear />
@@ -65,8 +65,8 @@
   
   <connectionStrings>
     <clear />
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" />
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb;DATABASE=foodwastedev;UID=ODBC;Pooling=True;SSL Mode=None" />
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" />
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=foodwastedev;UID=ODBC;Pooling=True;SSL Mode=None" />
   </connectionStrings>
   
   <appSettings>
@@ -290,9 +290,21 @@
       </service>
     </services>
     <client>
-      <endpoint name="AdresseRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService" />
-      <endpoint name="FinansstyringRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService" />
-      <endpoint name="FællesRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FællesRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService" />
+      <endpoint name="AdresseRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService">
+        <identity>
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService/10.128.0.189" />
+        </identity>
+      </endpoint>
+      <endpoint name="FinansstyringRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService">
+        <identity>
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService/10.128.0.189" />
+        </identity>
+      </endpoint>
+      <endpoint name="FællesRepositoryService" address="net.tcp://dataaccess.osdevgrp.local:7000/OSIntranet/DataAccess/FællesRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService">
+        <identity>
+          <userPrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService/10.128.0.189" />
+        </identity>
+      </endpoint>
       <endpoint name="AdressekartotekServiceIntegrationstest" address="http://localhost/osintranetdev/adressekartotekservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
         <identity>
           <certificateReference findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName" />
