Refactoring SystemProxy and FællesRepository to use parameterized queries

--- a/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
+++ b/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
@@ -110,6 +110,7 @@
     <Compile Include="DataProxies\DbCommandBuilderBase.cs" />
     <Compile Include="DataProxies\FoodWaste\FoodWasteCommandBuilder.cs" />
     <Compile Include="DataProviders\FoodWasteDataProvider.cs" />
+    <Compile Include="DataProxies\Fælles\CommonCommandBuilder.cs" />
     <Compile Include="DataProxies\MySqlCommandBuilder.cs" />
     <Compile Include="DataProviders\MySqlDataProvider.cs" />
     <Compile Include="DataProxies\DataProxyHelper.cs" />
