--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -426,6 +426,8 @@
     <Compile Include="Unittests\Repositories\DataProviders\FoodWasteDataProviderTests.cs" />
     <Compile Include="Unittests\Repositories\DataProviders\MySqlDataProviderTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\DataProxyHelperTests.cs" />
+    <Compile Include="Unittests\Repositories\DataProxies\DbCommandTestBuilder.cs" />
+    <Compile Include="Unittests\Repositories\DataProxies\DbCommandTestExecutor.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\DataProviderProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\FoodGroupProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\FoodItemGroupProxyTests.cs" />
@@ -441,6 +443,8 @@
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\TranslationInfoProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\TranslationProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\Fælles\SystemProxyTests.cs" />
+    <Compile Include="Unittests\Repositories\DataProxies\IDbCommandTestBuilder.cs" />
+    <Compile Include="Unittests\Repositories\DataProxies\IDbCommandTestExecutor.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\Kalender\AftaleProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\Kalender\BrugeraftaleProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\Kalender\BrugerProxyTests.cs" />
