Change the connection string to the foodwaste database so the services would use the delevopment database in debug mode

--- a/OSDevGrp.OSIntranet.Services/Web.Debug.config
+++ b/OSDevGrp.OSIntranet.Services/Web.Debug.config
@@ -18,7 +18,7 @@
   <connectionStrings>
     <clear/>
     <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=oswebdb;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=foodwaste;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=mysql-osdevgrp.northeurope.azurecontainer.io;DATABASE=foodwastedev;UID=ODBC;Pooling=True;SSL Mode=None" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
   <system.serviceModel>
