--- a/OSDevGrp.OSIntranet.Infrastructure/packages.config
+++ b/OSDevGrp.OSIntranet.Infrastructure/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net46" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net45" />
+  <package id="MySql.Data" version="8.0.13" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
