Adding the collection of storages to the HouseholdView

--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -192,9 +192,11 @@
     <Compile Include="Views\StakeholderView.cs" />
     <Compile Include="Views\StaticTextSystemView.cs" />
     <Compile Include="Views\StaticTextView.cs" />
+    <Compile Include="Views\StorageIdentificationView.cs" />
     <Compile Include="Views\StorageTypeIdentificationView.cs" />
     <Compile Include="Views\StorageTypeSystemView.cs" />
     <Compile Include="Views\StorageTypeView.cs" />
+    <Compile Include="Views\StorageView.cs" />
     <Compile Include="Views\SystemView.cs" />
     <Compile Include="Views\TabelView.cs" />
     <Compile Include="Views\TelefonlisteView.cs" />
