--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -308,9 +308,11 @@
     <Compile Include="Unittests\Contracts\Views\StakeholderViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\StaticTextSystemViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\StaticTextViewTests.cs" />
+    <Compile Include="Unittests\Contracts\Views\StorageIdentificationViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\StorageTypeIdentificationViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\StorageTypeSystemViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\StorageTypeViewTests.cs" />
+    <Compile Include="Unittests\Contracts\Views\StorageViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\SystemViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\TelefonlisteViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\TranslationInfoSystemViewTests.cs" />
